# OOFS

./: .env  .env.txt  AGENTS.md .txt  README.md  codebase.md  codexcli.md  package.json  prompt.md  session.md
Backend/: .env  .env.example  .env.local  .env.production  .env.production.sample  .env.railway  BACKEND.md  CRITICAL_IMPROVEMENTS_SUMMARY.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  Dockerfile.api  Dockerfile.indexer  Dockerfile.migrations  Dockerfile.workers  FINAL_VALIDATION_REPORT.md  IMPROVEMENT_PLAN.md  INTEGRATION_SUMMARY.md  Makefile  RAILWAY_DEPLOYMENT.md  README.md  docker-compose.prod.yml  docker-compose.yml  empty.md  oofsFRONTENDrepo.md  prompt.md  railway.yml  start.sh
Backend/configs/: default.yaml  detectors.yaml  plans.yaml  rate_limits.yaml
Backend/crates/anchor_sdk/: Cargo.toml
Backend/crates/anchor_sdk/src/: campaigns.rs  lib.rs  moment_registry.rs  staking.rs
Backend/crates/api/: Cargo.toml
Backend/crates/api/src/: auth_mw.rs  main.rs  observability_mw.rs  rate_limit_mw.rs  routes.rs  state.rs  ws_sse.rs
Backend/crates/api/src/dto/: analyze.rs  moment.rs  wallet.rs
Backend/crates/api/src/middleware/: auth.rs  errors.rs  rate_limit.rs
Backend/crates/api/src/routes/: analyze.rs  campaigns.rs  cards.rs  health.rs  moments.rs  tokens.rs  wallets.rs
Backend/crates/api/src/services/: portfolio.rs  pricing.rs
Backend/crates/detectors/: Cargo.toml
Backend/crates/detectors/src/: lib.rs  position.rs  position_tests.rs  prices.rs  s2e_detector_tests.rs
Backend/crates/indexer/: Cargo.toml
Backend/crates/indexer/src/: main.rs  main_new.rs
Backend/crates/renderer/: Cargo.toml
Backend/crates/renderer/src/: lib.rs  templates.rs
Backend/crates/shared/: Cargo.toml
Backend/crates/shared/src/: auth.rs  config.rs  constants.rs  db.rs  errors.rs  lib.rs  lib_tests.rs  metrics.rs  observability.rs  policy.rs  redis.rs  store.rs  telemetry.rs  types.rs  utils.rs
Backend/crates/shared/src/security/: dynamic_jwks.rs  helius_hmac.rs  mod.rs
Backend/crates/shared/src/types/: chain.rs  moment.rs  moment_tests.rs  policy.rs  price.rs
Backend/crates/workers/: Cargo.toml
Backend/crates/workers/src/: main.rs
Backend/crates/workers/src/jobs/: alerts_dispatch.rs  backfill_wallet.rs  mint_nft.rs
Backend/db/migrations/: 0001_tx_raw.sql  0002_actions.sql  0003_participants.sql  0004_positions.sql  0005_moments_extremes.sql  0006_prices.sql  0007_views.sql  0008_plans_policy.sql  0009_job_queue.sql  0010_token_facts.sql  0011_campaigns.sql  0012_minted_cards.sql
Backend/db/queries/: calculate_wallet_extremes.sql  dequeue_job.sql  enqueue_job.sql  insert_action.sql  insert_episode.sql  insert_lot.sql  insert_moment.sql  insert_realized_trade.sql  price_bucket_query.sql  select_leaderboard.sql  select_lots_for_wallet_mint.sql  select_moments_for_wallet.sql  select_price_at_time.sql  select_price_range_min_max.sql  select_user_plan.sql  select_wallet_actions.sql  select_wallet_coverage.sql  select_wallet_holdings.sql  select_wallet_signatures.sql  update_job_status.sql  upsert_episode.sql  upsert_lot.sql  upsert_policy_state.sql  upsert_token_facts.sql  upsert_tx_raw.sql  upsert_wallet_cursor.sql  wallet_extremes.sql
Backend/db/seed/: plans_seed.sql
Backend/deploy/grafana/provisioning/dashboards/: dashboards.yml
Backend/deploy/nginx/: nginx.conf
Backend/deploy/nginx/conf.d/: oof-backend.conf
Backend/deploy/prometheus/: alert_rules.yml  prometheus.yml
Backend/infra/docker/: api.Dockerfile  detectors.Dockerfile  docker-compose.dev.yml  indexer.Dockerfile  workers.Dockerfile
Backend/infra/observability/: prometheus.yml
Backend/infra/railway/: api.json
Backend/schemas/bus/: chain_event.proto
Backend/schemas/http/: openapi.v1.json
Backend/scripts/: backfill_wallet.sh  deploy-dev.sh  deploy-prod.sh  dev_up.sh  lint_all.sh  migrate.sh  seed.sh
Backend/tests/: Cargo.toml
Backend/tests/common/: mod.rs  test_env.rs
Backend/tests/integration/: auth_and_detection_tests.rs
Frontend/: .env.example  .env.railway  .npmrc  DEPLOYMENT.md  FIX_SUMMARY.md  FRONTEND_FIX_INSTRUCTIONS.md  FRONTEND_MVP_ROADMAP.md  FRONTEND_SETUP_SUMMARY.md  FRONTEND_STRATEGIC_ANALYSIS.md  deploy-production.sh  dev-win.bat  nixpacks.toml  package-lock.json  package.json  pnpm-lock.yaml  railway.yml  server.js  tailwind.config.ts  vite.config.ts
Frontend/client/: vitest.config.ts
Frontend/client/src/: App.tsx  index.css
Frontend/client/src/components/: AuthButton.tsx  Leaderboard.tsx  Navigation.tsx  PredictionCard.tsx  Sidebar.tsx  TokenCard.tsx
Frontend/client/src/components/__tests__/: AuthButton.test.tsx
Frontend/client/src/hooks/: useAchievements.tsx  useAuth.ts  useMomentsStream.ts
Frontend/client/src/lib/: api-client.ts  design-system.ts  dynamic-working.tsx  performance.tsx
Frontend/client/src/pages/: Dashboard.tsx  Landing.tsx  MainDashboard.tsx  OOFAirdrop.tsx  OOFBattleRoyale.tsx  OOFDetective.tsx  OOFDetectiveAdvanced.tsx  OOFLegends.tsx  OOFMoments.tsx  WalletAnalyzer.tsx
Frontend/client/src/providers/: AuthProvider.tsx  ThemeProvider.tsx
Frontend/client/src/services/: solanaOnChainService.ts  solanaTokenService.ts
Frontend/client/src/test/: setup.ts
Frontend/client/src/test/mocks/: server.ts
Frontend/nginx/: nginx.conf
Frontend/server/: routes.ts
