[workspace]
members = [
  "crates/shared",
  "crates/api",
  "crates/indexer",
  "crates/detectors",
  "crates/workers",
  "crates/renderer",
  "crates/anchor_sdk",
]

# Workspace-wide test dependencies
[workspace.dependencies]
tokio-test = "0.4"
mockall = "0.12"
wiremock = "0.6"
testcontainers = "0.18"
testcontainers-modules = { version = "0.9", features = ["postgres", "redis"] }
faker = "0.2"
proptest = "1.4"
serial_test = "3.1"
temp-env = "0.3"
assert_matches = "1.5"

[patch.crates-io]
# Optional: pin versions for reproducible builds (left blank here)

[workspace.metadata]
# Keep SQLx offline checks configurable if needed
sqlx_offline = true
