[package]
name = "oof-backend-tests"
version = "0.1.0"
edition = "2021"

[[test]]
name = "integration"
path = "integration/mod.rs"

[[test]]
name = "e2e"
path = "e2e/mod.rs"

[dependencies]
# Workspace crates
shared = { path = "../crates/shared" }
detectors = { path = "../crates/detectors" }
renderer = { path = "../crates/renderer" }
anchor_sdk = { path = "../crates/anchor_sdk" }

# Async runtime
tokio = { version = "1.34", features = ["rt-multi-thread", "macros", "time", "test-util"] }

# Testing framework
tokio-test = { workspace = true }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "macros", "migrate"] }

# Mocking and testing utilities
mockall = { workspace = true }
wiremock = { workspace = true }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }

# Property-based testing
proptest = { workspace = true }

# Test data generation
faker = { workspace = true }

# Test utilities
serial_test = { workspace = true }
temp-env = { workspace = true }
assert_matches = { workspace = true }

# HTTP client for testing
reqwest = { version = "0.11", features = ["json"] }

# JSON
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

# Other utilities
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
time = { version = "0.3", features = ["macros", "serde"] }
rust_decimal = "1.29"
ulid = "1.2"
once_cell = "1.19"
