[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros", "json"] }
tokio = { version = "1.34", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
ulid = "1.2"
time = { version = "0.3", features = ["serde", "macros"] }
rust_decimal = "1.29"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
prometheus = "0.13"
futures = "0.3"
shared = { path = "../shared", features = ["with-r2"] }
renderer = { path = "../renderer" }
once_cell = "1.19"
base64 = "0.22"
async-stream = "0.3"
regex = "1.10"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tweety_rs = "0.3"
farcaster-rs = "0.1"
