[package]
name = "detectors"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
shared = { path = "../shared" }
rust_decimal = "1.29"
time = { version = "0.3", features = ["serde", "macros"] }
rust_decimal_macros = "1.29"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "macros"] }
futures = "0.3"
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tokio = { version = "1.34", features = ["rt-multi-thread", "macros", "time"] }
tracing = "0.1"
ulid = "1.2"
