[package]
name = "indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.34", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
ulid = "1.2"
time = { version = "0.3", features = ["serde", "macros"] }
rust_decimal = "1.29"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "macros"] }
shared = { path = "../shared", features = ["with-r2"] }
zstd = "0.13"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
