[package]
name = "renderer"
version = "0.1.0"
edition = "2021"

[dependencies]
resvg = { version = "0.43", default-features = false, features = ["raqote", "text"] }
usvg = { version = "0.43", default-features = false }
tiny-skia = "0.11"
image = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shared = { path = "../shared" }
askama = { version = "0.12", default-features = false, features = ["with-serde"] }
anyhow = "1.0"
tracing = "0.1"
time = { version = "0.3", features = ["serde", "macros"] }
rust_decimal = "1.29"
tokio = { version = "1.34", features = ["macros"] }
