[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.34", features = ["rt-multi-thread", "macros", "time"] }
tracing = "0.1"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "chrono"] }
rust_decimal = "1.29"
ulid = "1.2"
time = { version = "0.3", features = ["macros", "serde"] }
thiserror = "1.0"
anyhow = "1.0"
async-trait = "0.1"
redis = { version = "0.23", optional = true }
dotenvy = "0.15"
jsonwebtoken = { version = "9", default-features = false, features = ["use_pem"] }
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["cors"] }
http = "1"
prometheus = "0.13"
once_cell = "1.19"
url = "2.5"
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1.6"
serde_yaml = "0.9"
hex = "0.4"
zstd = "0.13"
subtle = "2.5"
rand = "0.8"
bs58 = "0.5"

[features]
default = []
with-redis = ["redis"]
with-r2 = ["aws-config", "aws-sdk-s3", "aws-credential-types", "aws-types"]

[dependencies.aws-credential-types]
version = "1.2"
optional = true

[dependencies.aws-types]
version = "1.2"
optional = true

[dependencies.aws-config]
version = "1.2"
optional = true

[dependencies.aws-sdk-s3]
version = "1.2"
optional = true
